fix cards to align side by side for blog posts using grid system flexbox with bootstrap

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,6 +32,7 @@ body {
 .card {
     border: none;
     background-color: transparent;
+    padding: 2em;
 }
 
 .image-container {
